# Maze-Runner-Robotics

./: CMakeLists.txt  README.md  package.xml
RViz/: map.rviz  marker.rviz  posArr_and_marker.rviz
launch/: a_star.launch  aufgabe_2.launch  aufgabe_3.launch  control.launch  exploration.launch  laser_sector.launch  main.launch  map_loader.launch
maps/: maze8.yaml  maze9.yaml  my_map2.pgm  my_map2.yaml  my_map22.pgm  my_map22.yaml  my_map23.pgm  my_map23.yaml  my_maze_map.pgm  my_maze_map.yaml
msg/: MapData.msg
src/: a_star_algorithm.py  aufgabe_2.py  aufgabe_3.py  ellipse_movement.py  greedy_path_to_goal.py  laser_sector.py  map_loader.py  my_code.py  tb3_driver.py  unknown_maze_navi.py
